[package]
name = "skryn"
version = "0.0.2"
authors = ["Fasih Rana <fasih.rana@apparicion.com>"]
exclude = [
	".idea",
	"Skryn.iml"
]

[dependencies]
winit = "^0.17"
glutin = "*"
webrender = "^0.58"
gleam = "*"
app_units = "0.7"
euclid = "0.19"
scan-rules = "*"
font-kit = "*"
lazy_static = "*"
clipboard = "*"
#itertools = "*"
harfbuzz-sys = "*"

unicode-bidi = "*"
#unicode-normalization = "*"
#unicode-segmentation = "*"

