[package]
name = "skryn"                                             
version = "0.0.3"                                          
authors = ["Fasih Rana <fasih.rana@obsidium.co>"]          
edition = "2018"                                           
description = "A servo/webrender based Desktop GUI library"
license = "MIT"                                            

exclude = [
	".idea",
	"Skryn.iml"
]

[dependencies]
winit = "^0.17"
glutin = "*"
webrender = "^0.58"
gleam = "*"
app_units = "0.7"
euclid = "0.19"
scan-rules = "*"
font-kit = "*"
lazy_static = "*"
clipboard = "*"
itertools = "*"
harfbuzz-sys = "*"
unicode-bidi = "*"

