[package]
name = "skryn"                                             
version = "0.0.4"
authors = ["Fasih Rana <fasih.rana@obsidium.co>"]          
edition = "2018"                                           
description = "A servo/webrender based Desktop GUI library"
license = "MIT"                                            

exclude = [
	".idea",
	"Skryn.iml"
]

[dependencies]
winit = "^0.19"
glutin = "^0.21.0-rc2"
webrender = "^0.58"
gleam = "^0.6.13"
app_units = "0.7"
euclid = "0.19"
scan-rules = "^0.2.0"
font-kit = "^0.1.0"
lazy_static = "^1.3.0"
clipboard = "^0.5.0"
itertools = "^0.8.0"
harfbuzz-sys = "^0.3.0"
unicode-bidi = "^0.3.4"

